make top and vision

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-  <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8">
     <title>haru's portfolio</title>
-    <link rel="stylesheet" href="./assets/css/index.css">
-</head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <link rel="stylesheet" href="../assets/css/index.css">
+  </head>
     
 <body>
 
@@ -13,7 +14,7 @@
   <header class="header-wrapper">
     <div class="header-inner">
       <h1 class="TOP">
-        <img src="../assets/image/TOP.png" alt="TOPへ"><a href="#"></a>
+        <a href="#"><img src="../assets/image/TOP.png" alt="TOPへ"></a>
       </h1>
       <nav class="header-nav">
         <ul class="nav-list">
@@ -32,8 +33,8 @@
     <!-- top -->
     <div class="top-wrapper">
       <div class="top-content">
-        <p class="top-title">西林遥奈のポートフォリオ</p>
-        <p class="top-subtitle">Haruna Nishibayashi's portfolio</p>
+        <h1 class="top-title">西林遥奈のポートフォリオ</h1>
+        <h1 class="top-subtitle">Haruna Nishibayashi's portfolio</h1>
       </div>
     </div>
     <!-- //top -->
@@ -44,9 +45,11 @@
         <div class="vision-text-wrapper">
           <h2 class="vision-text-title">スキを届ける</h2>
           <img src="../assets/image/highlight line.png" alt="強調線">
-          <p>好き</p>
-          <p class="vision-text">×</p>
-          <p>隙(余裕)</p>
+          <div class="vision-text">
+            <p>好き</p>
+            <p>×</p>
+            <p>隙(余裕)</p>
+          </div>
         </div>
         <div class="vision-img-wrapper">
           <img src="../assets/image/gohan set.png" alt="ごはんセット">
@@ -58,8 +61,6 @@
     <!-- section_works -->
     <section class="section-wrapper">
       <div class="section-content section-content-works">
-        <img src="../assets/image/waves.png" alt="visionの背景">
-
         <!-- yaotan -->
           <div class="section-content-yaotan">
             <img src="../assets/image/yaotan_circle.png" alt="やおたん">
@@ -150,7 +151,7 @@
     <!-- section_contact -->
     <section class="section-wrapper">
       <div class="section-content section-content-about">
-        <img src="../assets/image/wrapping cloth.png" alt="contactの背景">
+        <!-- <img src="../assets/image/wrapping cloth.png" alt="contactの背景"> -->
         <div class="section-content-name">
           <h2>CONTACT</h2>
         </div>
