--- a/index.html
+++ b/index.html
@@ -68,10 +68,7 @@
                 <img src="../assets/image/square_w.png">
                   <h3 class="section-content-name">やおたん</h3>
                     <p>アイデア→形に</p>
-                <div class="section-content-button">
-                  <img src="../assets/image/square_bw.png">
-                  <a href="">見てみる</a>
-                </div>
+                  <a class="section-content-button" href="">見てみる</a>
               </div>
           </div>
 
@@ -82,10 +79,7 @@
               <img src="../assets/image/square_w.png">
                 <h3 class="section-content-name">Katten</h3>
                   <p>現在進行形</p>
-              <div class="section-content-button">
-                <img src="../assets/image/square_bw.png">
-                <a href="">見てみる</a>
-              </div>
+                <a class="section-content-button" href="">見てみる</a
             </div>
           </div>
 
@@ -96,12 +90,10 @@
               <img src="../assets/image/square_w.png">
                 <h3 class="section-content-name">Others</h3>
                   <p>伝え方や体験創造</p>
-              <div class="section-content-button">
-                <img src="../assets/image/square_bw.png">
-                <a href="">見てみる</a>
-              </div>
+                <a class="section-content-button" href="">見てみる</a>
             </div>
           </div>
+        </div>
       </div>
     </section>
     <!-- //section_works -->
