--- a/index.html
+++ b/index.html
@@ -63,29 +63,29 @@
       <div class="section-content section-content-works">
         <!-- yaotan -->
           <div class="section-content-yaotan">
-            <img src="../assets/image/yaotan_circle.png" alt="やおたん">
+            <img class="section-content-img" src="../assets/image/yaotan_circle.png" alt="やおたん">
               <div class="section-content-dsc">
                 <img src="../assets/image/square_w.png">
                   <h3 class="section-content-name">やおたん</h3>
                     <p>アイデア→形に</p>
-                  <a class="section-content-button" href="">見てみる</a>
+                  <a href="#" class="section-content-button">見てみる</a>
               </div>
           </div>
 
         <!-- Katten -->
           <div class="section-content-Katten">
-            <img src="../assets/image/katten_circle.png" alt="Katten">
+            <img class="section-content-img" src="../assets/image/katten_circle.png" alt="Katten">
             <div class="section-content-dsc">
               <img src="../assets/image/square_w.png">
                 <h3 class="section-content-name">Katten</h3>
                   <p>現在進行形</p>
-                <a class="section-content-button" href="">見てみる</a
+                <a href="#" class="section-content-button">見てみる</a
             </div>
           </div>
 
         <!-- Others -->
           <div class="section-content-Others">
-            <img src="../assets/image/others_circle.png" alt="Others">
+            <img class="section-content-img" src="../assets/image/others_circle.png" alt="Others">
             <div class="section-content-dsc">
               <img src="../assets/image/square_w.png">
                 <h3 class="section-content-name">Others</h3>
