--- a/index.html
+++ b/index.html
@@ -60,37 +60,40 @@
 
     <!-- section_works -->
     <section class="section-wrapper">
-      <div class="section-content section-content-works">
+      <div class="section-content section-content-works" id="work-intro-section">
         <!-- yaotan -->
-          <div class="section-content-yaotan">
+          <div class="work yaotan">
             <img class="section-content-img" src="../assets/image/yaotan_circle.png" alt="やおたん">
               <div class="section-content-dsc">
-                <img src="../assets/image/square_w.png">
                   <h3 class="section-content-name">やおたん</h3>
                     <p>アイデア→形に</p>
-                  <a href="#" class="section-content-button">見てみる</a>
+                    <button>
+                      <a href="#" class="section-content-button">見てみる</a>
+                    </button>
               </div>
           </div>
 
         <!-- Katten -->
-          <div class="section-content-Katten">
+          <div class="work katten">
             <img class="section-content-img" src="../assets/image/katten_circle.png" alt="Katten">
             <div class="section-content-dsc">
-              <img src="../assets/image/square_w.png">
                 <h3 class="section-content-name">Katten</h3>
                   <p>現在進行形</p>
-                <a href="#" class="section-content-button">見てみる</a
+                  <button>
+                    <a href="#" class="section-content-button">見てみる</a>
+                  </button>
             </div>
           </div>
 
         <!-- Others -->
-          <div class="section-content-Others">
+          <div class="work others">
             <img class="section-content-img" src="../assets/image/others_circle.png" alt="Others">
             <div class="section-content-dsc">
-              <img src="../assets/image/square_w.png">
                 <h3 class="section-content-name">Others</h3>
                   <p>伝え方や体験創造</p>
-                <a class="section-content-button" href="">見てみる</a>
+                  <button>
+                    <a href="#" class="section-content-button">見てみる</a>
+                  </button>
             </div>
           </div>
         </div>
