--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
         </div>
         <div class="vision-img-wrapper">
-          <img src="../assets/image/gohan set.png" alt="ごはんセット">
+          <img src="../assets/image/gohan set.png" alt="ごはんはスキなもの">
         </div>
       </div>
     </section>
@@ -104,12 +104,12 @@
 
     <!-- section_about -->
     <section class="section-wrapper">
-      <div class="section-content section-content-about">
-        <img src="../assets/image/stones.png" alt="aboutの背景">
-        <div class="section-content-name">
-          <img src="../assets/image/names.png">
+      <div style="background-color:rgb(43, 30, 224)" class="section-content section-content-about about">
+        <img style="background-color:black" class="content-img" src="../assets/image/stones.png">
+        <div style="background-color:aqua" class="content-name">
+          <img src="../assets/image/names.png" alt="西林遥奈 Nishibayashi Haruna">
         </div>
-        <div class="section-content-dsc">
+        <div style="background-color:green" class="section-content-dsc">
           <p>#UI</p>
           <p>#UX</p>
           <p>#意味のデザイン</p>
@@ -124,15 +124,15 @@
           <p>#調理師免許</p>
             <div class="section-content-dsc-link">
               <div>
-                <a href="">note</a>
+                <a href="#">note</a>
                 <img src="../assets/image/yazirushi.png">
               </div>
               <div>
-                <a href="">works</a>
+                <a href="#">works</a>
                 <img src="../assets/image/yazirushi.png">
               </div>
               <div>
-                <a href="">scrapbox</a>
+                <a href="#">scrapbox</a>
                 <img src="../assets/image/yazirushi.png">
               </div>
             </div>
@@ -144,8 +144,8 @@
     <!-- //section_about -->
 
     <!-- section_contact -->
-    <section class="section-wrapper">
-      <div class="section-content section-content-about">
+    <section style="background-color:red" class="section-wrapper">
+      <div class="section-content section-content-contact">
         <!-- <img src="../assets/image/wrapping cloth.png" alt="contactの背景"> -->
         <div class="section-content-name">
           <h2>CONTACT</h2>
@@ -159,7 +159,7 @@
   </main>
 
     <!-- footer -->
-  <footer>
+  <footer style="background-color:purple">
     <h6>
       &copy; 2022 Haruna Nishibayashi All Rights Reserved.
     </h6>
