--- a/index.html
+++ b/index.html
@@ -4,167 +4,144 @@
     <meta charset="UTF-8">
     <title>haru's portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" href="../assets/css/index.css">
+    <link rel="stylesheet" href="./assets/css/index.css">
   </head>
-    
-<body>
-
-
-  <!-- header -->
-  <header class="header-wrapper">
-    <div class="header-inner">
-      <h1 class="TOP">
-        <a href="#"><img src="../assets/image/TOP.png" alt="TOPへ"></a>
-      </h1>
-      <nav class="header-nav">
-        <ul class="nav-list">
-          <li class="nav-item"><a href="">VISION</a></li>
-          <li class="nav-item"><a href="">WORKS</a></li>
-          <li class="nav-item"><a href="">ABOUT</a></li>
-          <li class="nav-item"><a href="">CONTACT</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-  <!-- //header --> 
-
-  <!-- main -->
-  <main>
-    <!-- top -->
-    <div class="top-wrapper">
-      <div class="top-content">
-        <h1 class="top-title">西林遥奈のポートフォリオ</h1>
-        <h1 class="top-subtitle">Haruna Nishibayashi's portfolio</h1>
+  <body>
+    <!-- header -->
+    <header class="header-wrapper">
+      <div class="header-inner">
+        <h1 class="TOP">
+          <a href="#"><img src="./assets/image/TOP.png" alt="TOPへ"></a>
+        </h1>
+        <nav class="header-nav">
+          <ul class="nav-list">
+            <li class="nav-item"><a href="#">VISION</a></li>
+            <li class="nav-item"><a href="#">WORKS</a></li>
+            <li class="nav-item"><a href="#">ABOUT</a></li>
+            <li class="nav-item"><a href="#">CONTACT</a></li>
+          </ul>
+        </nav>
       </div>
-    </div>
-    <!-- //top -->
+    </header>
+    <!-- //header -->
 
-    <!-- section_vision -->
-    <section class="section-wrapper">
-      <div class="section-content section-content-vision">
-        <div class="vision-text-wrapper">
-          <h2 class="vision-text-title">スキを届ける</h2>
-          <img src="../assets/image/highlight line.png" alt="強調線">
-          <div class="vision-text">
-            <p>好き</p>
-            <p>×</p>
-            <p>隙(余裕)</p>
+    <!-- main -->
+    <main>
+      <!-- top -->
+      <div class="top-wrapper">
+        <div class="top-content">
+          <h1 class="top-title">西林遥奈のポートフォリオ</h1>
+          <h1 class="top-subtitle">Haruna Nishibayashi's portfolio</h1>
+        </div>
+      </div>
+      <!-- //top -->
+
+      <!-- section_vision -->
+      <section class="section-wrapper">
+        <div class="section-content section-content-vision">
+          <div class="vision-text-wrapper">
+            <h2 class="vision-text-title">スキを届ける</h2>
+            <img src="./assets/image/highlight line.png" alt="強調線">
+            <div class="vision-text">
+              <p>好き</p>
+              <p>×</p>
+              <p>隙(余裕)</p>
+            </div>
+          </div>
+          <div class="vision-img-wrapper">
+            <img src="./assets/image/gohan set.png" alt="ごはんはスキなもの">
           </div>
         </div>
-        <div class="vision-img-wrapper">
-          <img src="../assets/image/gohan set.png" alt="ごはんはスキなもの">
-        </div>
-      </div>
-    </section>
-    <!-- //section_vision -->
+      </section>
+      <!-- //section_vision -->
 
-    <!-- section_works -->
-    <section class="section-wrapper">
-      <div class="section-content section-content-works" id="work-intro-section">
-        <!-- yaotan -->
-          <div class="work yaotan">
-            <img class="section-content-img" src="../assets/image/yaotan_circle.png" alt="やおたん">
-              <div class="section-content-dsc">
+      <!-- section_works -->
+      <section class="section-wrapper">
+        <div class="section-content section-content-works" id="work-intro-section">
+          <!-- yaotan -->
+            <div class="work yaotan">
+              <img class="section-content-img" src="./assets/image/yaotan_circle.png" alt="やおたん">
+                <div class="section-content-dsc">
                   <h3 class="section-content-name">やおたん</h3>
-                    <p>アイデア→形に</p>
-                    <button>
-                      <a href="#" class="section-content-button">見てみる</a>
-                    </button>
-              </div>
-          </div>
+                  <p>アイデア→形に</p>
+                  <button>
+                    <a href="#" class="section-content-button">見てみる</a>
+                  </button>
+                </div>
+            </div>
 
-        <!-- Katten -->
-          <div class="work katten">
-            <img class="section-content-img" src="../assets/image/katten_circle.png" alt="Katten">
-            <div class="section-content-dsc">
+          <!-- Katten -->
+            <div class="work katten">
+              <img class="section-content-img" src="./assets/image/katten_circle.png" alt="Katten">
+              <div class="section-content-dsc">
                 <h3 class="section-content-name">Katten</h3>
-                  <p>現在進行形</p>
-                  <button>
-                    <a href="#" class="section-content-button">見てみる</a>
-                  </button>
+                <p>現在進行形</p>
+                <button>
+                  <a href="#" class="section-content-button">見てみる</a>
+                </button>
+              </div>
             </div>
-          </div>
 
-        <!-- Others -->
-          <div class="work others">
-            <img class="section-content-img" src="../assets/image/others_circle.png" alt="Others">
-            <div class="section-content-dsc">
+          <!-- Others -->
+            <div class="work others">
+              <img class="section-content-img" src="./assets/image/others_circle.png" alt="Others">
+              <div class="section-content-dsc">
                 <h3 class="section-content-name">Others</h3>
-                  <p>伝え方や体験創造</p>
-                  <button>
-                    <a href="#" class="section-content-button">見てみる</a>
-                  </button>
+                <p>伝え方や体験創造</p>
+                <button>
+                  <a href="#" class="section-content-button">見てみる</a>
+                </button>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-    <!-- //section_works -->
+      </section>
+      <!-- //section_works -->
 
 
-    <!-- section_about -->
-    <section class="section-wrapper">
-      <div style="background-color:rgb(43, 30, 224)" class="section-content section-content-about about">
-        <img style="background-color:black" class="content-img" src="../assets/image/stones.png">
-        <div style="background-color:aqua" class="content-name">
-          <img src="../assets/image/names.png" alt="西林遥奈 Nishibayashi Haruna">
-        </div>
-        <div style="background-color:green" class="section-content-dsc">
-          <p>#UI</p>
-          <p>#UX</p>
-          <p>#意味のデザイン</p>
-          <p>#サービスデザイン</p>
-          <p>#標識</p>
-          <p>#文化人類学</p>
-          <p>#書道</p>
-          <p>#経理</p>
-          <p>#自転車旅</p>
-          <p>#島暮らし</p>
-          <p>#焚き火</p>
-          <p>#調理師免許</p>
+      <!-- section_about -->
+      <section class="section-wrapper">
+        <div class="section-content section-content-about about">
+          <img class="content-img" src="./assets/image/stones and introduce.png">
+          <div class="section-content-dsc">
             <div class="section-content-dsc-link">
-              <div>
-                <a href="#">note</a>
-                <img src="../assets/image/yazirushi.png">
-              </div>
-              <div>
-                <a href="#">works</a>
-                <img src="../assets/image/yazirushi.png">
-              </div>
-              <div>
-                <a href="#">scrapbox</a>
-                <img src="../assets/image/yazirushi.png">
-              </div>
+              <a href="#">note</a>
+              <img src="./assets/image/yazirushi.png">
             </div>
-            
-          <p></p>
+            <div class="section-content-dsc-link">
+              <a href="#">works</a>
+              <img src="./assets/image/yazirushi.png">
+            </div>
+            <div class="section-content-dsc-link">
+              <a href="#">scrapbox</a>
+              <img src="./assets/image/yazirushi.png">
+            </div>
+          </div>
         </div>
-      </div>
-    </section>
-    <!-- //section_about -->
+      </section>
+      <!-- //section_about -->
 
-    <!-- section_contact -->
-    <section style="background-color:red" class="section-wrapper">
-      <div class="section-content section-content-contact">
-        <!-- <img src="../assets/image/wrapping cloth.png" alt="contactの背景"> -->
-        <div class="section-content-name">
-          <h2>CONTACT</h2>
+      <!-- section_contact -->
+      <section style="background-color:red" class="section-wrapper">
+        <div class="section-content section-content-contact">
+          <!-- <img src="../assets/image/wrapping cloth.png" alt="contactの背景"> -->
+          <div class="section-content-name">
+            <h2>CONTACT</h2>
+          </div>
+          <div class="section-content-dsc">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScM_t5lflU0rWINfkqDp7JiM-ouz7Km_bq5-tKfrgM2MEQmfQ/viewform">ご連絡はこちらのGoogleフォームへ</a>
+          </div>
         </div>
-        <div class="section-content-dsc">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLScM_t5lflU0rWINfkqDp7JiM-ouz7Km_bq5-tKfrgM2MEQmfQ/viewform">ご連絡はこちらのGoogleフォームへ</a>
-        </div>
-      </div>
-    </section>
-        <!-- //section_contact -->
-  </main>
+      </section>
+          <!-- //section_contact -->
+    </main>
 
-    <!-- footer -->
-  <footer style="background-color:purple">
-    <h6>
-      &copy; 2022 Haruna Nishibayashi All Rights Reserved.
-    </h6>
-  </footer>
-    <!-- //footer -->
-
-</body>
+      <!-- footer -->
+    <footer style="background-color:purple">
+      <p>
+        &copy; 2022 Haruna Nishibayashi All Rights Reserved.
+      </p>
+    </footer>
+      <!-- //footer -->
+  </body>
 </html>
