Adjusting all contents

--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
           <img class="content-img" src="./assets/image/stones and introduce.png">
           <div class="section-content-dsc">
             <div class="section-content-dsc-link">
-              <a href="#">note</a>
+              <a href="#">note</a><br>
               <img src="./assets/image/yazirushi.png">
             </div>
             <div class="section-content-dsc-link">
-              <a href="#">works</a>
+              <a href="#">works</a><br>
               <img src="./assets/image/yazirushi.png">
             </div>
             <div class="section-content-dsc-link">
-              <a href="#">scrapbox</a>
+              <a href="#">scrapbox</a><br>
               <img src="./assets/image/yazirushi.png">
             </div>
           </div>
@@ -122,9 +122,9 @@
       <!-- //section_about -->
 
       <!-- section_contact -->
-      <section style="background-color:red" class="section-wrapper">
-        <div class="section-content section-content-contact">
-          <!-- <img src="../assets/image/wrapping cloth.png" alt="contactの背景"> -->
+      <section class="section-wrapper">
+        <div class="section-content section-content-contact contact">
+          <img src="./assets/image/wrapping cloth.png" alt="">
           <div class="section-content-name">
             <h2>CONTACT</h2>
           </div>
@@ -137,7 +137,7 @@
     </main>
 
       <!-- footer -->
-    <footer style="background-color:purple">
+    <footer>
       <p>
         &copy; 2022 Haruna Nishibayashi All Rights Reserved.
       </p>
