--- a/index.html
+++ b/index.html
@@ -4,21 +4,19 @@
     <meta charset="UTF-8">
     <title>haru's portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" href="./assets/css/index.css">
+    <!-- <link rel="stylesheet" href="./assets/css/index.css"> -->
   </head>
   <body>
     <!-- header -->
     <header class="header-wrapper">
       <div class="header-inner">
-        <h1 class="TOP">
-          <a href="#"><img src="./assets/image/TOP.png" alt="TOPへ"></a>
-        </h1>
         <nav class="header-nav">
           <ul class="nav-list">
-            <li class="nav-item"><a href="#">VISION</a></li>
-            <li class="nav-item"><a href="#">WORKS</a></li>
-            <li class="nav-item"><a href="#">ABOUT</a></li>
-            <li class="nav-item"><a href="#">CONTACT</a></li>
+            <li class="nav-item"><a href="#">TOP</a></li>
+            <li class="nav-item"><a href="#">Concept</a></li>
+            <li class="nav-item"><a href="#">About</a></li>
+            <li class="nav-item"><a href="#">Works</a></li>
+            <li class="nav-item"><a href="#">Contact&Social</a></li>
           </ul>
         </nav>
       </div>
@@ -30,116 +28,114 @@
       <!-- top -->
       <div class="top-wrapper">
         <div class="top-content">
-          <h1 class="top-title">西林遥奈のポートフォリオ</h1>
-          <h1 class="top-subtitle">Haruna Nishibayashi's portfolio</h1>
+          <img src="./assets/image/logo.png" alt="logo">
+          <h1 id="top-title">Haruna.N's portfolio</h1>
+            <a href="#">PDF版をダウンロードする</a>
         </div>
       </div>
       <!-- //top -->
 
-      <!-- section_vision -->
+      <!-- section_concept -->
       <section class="section-wrapper">
-        <div class="section-content section-content-vision">
-          <div class="vision-text-wrapper">
-            <h2 class="vision-text-title">スキを届ける</h2>
-            <img src="./assets/image/highlight line.png" alt="強調線">
-            <div class="vision-text">
-              <p>好き</p>
-              <p>×</p>
-              <p>隙(余裕)</p>
-            </div>
-          </div>
-          <div class="vision-img-wrapper">
-            <img src="./assets/image/gohan set.png" alt="ごはんはスキなもの">
-          </div>
-        </div>
-      </section>
-      <!-- //section_vision -->
-
-      <!-- section_works -->
-      <section class="section-wrapper">
-        <div class="section-content section-content-works" id="work-intro-section">
-          <!-- yaotan -->
-            <div class="work yaotan">
-              <img class="section-content-img" src="./assets/image/yaotan_circle.png" alt="やおたん">
-                <div class="section-content-dsc">
-                  <h3 class="section-content-name">やおたん</h3>
-                  <p>アイデア→形に</p>
-                  <button>
-                    <a href="#" class="section-content-button">見てみる</a>
-                  </button>
+        <div class="section-content section-content-concept">
+          <h2 class="title">Concept</h2>
+            <div class="text-wrapper">
+              <h3 class="subtitle">自然と、なじむ</h3>
+                <img src="./assets/image/concept-pic.png" alt="concept-pic">
+                <div class="concept-text">
+                  <p>その在り方や形には理由がある。元からそうであるかのような、すっと受け入れられるデザインを目指しています。</p>
+                  <p>使いやすさや情報の伝わりやすさを兼ね備え、未来を誰かにとって心地よいものに。</p>
                 </div>
             </div>
-
-          <!-- Katten -->
-            <div class="work katten">
-              <img class="section-content-img" src="./assets/image/katten_circle.png" alt="Katten">
-              <div class="section-content-dsc">
-                <h3 class="section-content-name">Katten</h3>
-                <p>現在進行形</p>
-                <button>
-                  <a href="#" class="section-content-button">見てみる</a>
-                </button>
-              </div>
-            </div>
-
-          <!-- Others -->
-            <div class="work others">
-              <img class="section-content-img" src="./assets/image/others_circle.png" alt="Others">
-              <div class="section-content-dsc">
-                <h3 class="section-content-name">Others</h3>
-                <p>伝え方や体験創造</p>
-                <button>
-                  <a href="#" class="section-content-button">見てみる</a>
-                </button>
-              </div>
-            </div>
-          </div>
         </div>
       </section>
-      <!-- //section_works -->
-
+      <!-- //section_concept -->
 
       <!-- section_about -->
       <section class="section-wrapper">
-        <div class="section-content section-content-about about">
-          <img class="content-img" src="./assets/image/stones and introduce.png">
-          <div class="section-content-dsc">
-            <div class="section-content-dsc-link">
-              <a href="#">note</a><br>
-              <img src="./assets/image/yazirushi.png">
+        <div class="section-content section-content-about">
+          <h2 class="title">About</h2>
+            <div class="text-wrapper">
+              <h3 class="subtitle">まずはやる。</h3>
+                <div class="about-content">
+                  <img src="./assets/image/about-food.png" alt="about-food">
+                    <h4 id="food">食</h4>
+                      <p>イベント等を開催し、チームや企画の進め方を知るきっかけです。また、高校の学部では調理師免許を取得し、大学では国内外の文化と人との出会いにつながっています。</p>
+                </div>
+                <div class="about-content">
+                  <img src="./assets/image/about-bicycle.png" alt="about-bicycle">
+                    <h4 id="bicycle">自転車</h4>
+                      <p>日本全国あちこちを周り、自分の視野が広がった大きな要因です。知っていると思っていた自分の住む国でさえ、行ってみないと気づかないことだらけでした。</p>
+                </div>
+                <div class="about-content">
+                  <img src="./assets/image/about-business.png" alt="about-business">
+                    <h4 id="business">経営</h4>
+                      <p>社会全体に影響する企業、ビジネスの世界を知ろうと大学では経営学を専攻。座学だけでなく、アイデアの練り方やプレゼンでの伝え方を鍛えたことは今も生きています。</p>
+                </div>
+                <div class="about-content">
+                  <img src="./assets/image/about-accounting.png" alt="about-accounting">
+                    <h4 id="accounting">会計</h4>
+                      <p>管理会計を中心に実務を経験しています。決算等の通常業務に加え、部署内外での情報伝達方法の改善や他チームとのコミュニケーションの機会を設け、推進しました。</p>
+                </div>
             </div>
-            <div class="section-content-dsc-link">
-              <a href="#">works</a><br>
-              <img src="./assets/image/yazirushi.png">
-            </div>
-            <div class="section-content-dsc-link">
-              <a href="#">scrapbox</a><br>
-              <img src="./assets/image/yazirushi.png">
-            </div>
-          </div>
         </div>
       </section>
       <!-- //section_about -->
 
+
+      <!-- section_works -->
+      <section class="section-wrapper">
+        <div class="section-content section-content-works">
+          <h2 class="title">Works</h2>
+          <!-- Katten -->
+            <div class="works-content">
+              <img src="./assets/image/works-back.png">
+                <a id="Katten" href="#">Katten</a>
+                <p>アプリコンセプト・デザイン</p>
+                <p>”いつでも見られる物置棚”</p>
+            </div>
+
+          <!-- Craftshop -->
+          <div class="works-content">
+            <img src="./assets/image/works-back.png">
+              <a id="Craftshop" href="#">Craftshop</a>
+              <p>ECサイト・ロゴデザイン</p>
+              <p>”愛される手仕事を伝える名刺”</p>
+          </div>
+
+          <!-- yaotan -->
+          <div class="works-content">
+            <img src="./assets/image/works-back.png">
+              <a id="yaotan" href="#">やおたん</a>
+              <p>アプリコンセプト・デザイン</p>
+              <p>”地域を、お店から好きになる。”</p>
+          </div>
+
+      <!-- //section_works -->
+
+
       <!-- section_contact -->
       <section class="section-wrapper">
-        <div class="section-content section-content-contact contact">
-          <img src="./assets/image/wrapping cloth.png" alt="">
-          <div class="section-content-name">
-            <h2>CONTACT</h2>
-          </div>
-          <div class="section-content-dsc">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScM_t5lflU0rWINfkqDp7JiM-ouz7Km_bq5-tKfrgM2MEQmfQ/viewform">ご連絡はこちらのGoogleフォームへ</a>
-          </div>
+        <div class="section-content section-content-contact">
+          <h2 class="title">Contact&Social</h2>
+            <h4 class="subtitle">お気軽にお問合せください。</h3>
+              <div id="contact">
+                <a href="#">note</a>
+                <a href="#">Scrapbox</a>
+                <a href="#">Github</a>
+              </div>
         </div>
       </section>
-          <!-- //section_contact -->
+      <!-- //section_contact -->
     </main>
 
       <!-- footer -->
     <footer>
+      <img src="./assets/image/footerbar.png" alt="">
+      <br>
+      <img src="./assets/image/logo-s.png" alt="">
       <p>
-        &copy; 2022 Haruna Nishibayashi All Rights Reserved.
+        &copy; Haruna.N 2022
       </p>
     </footer>
       <!-- //footer -->
