make css for smartphone

--- a/index.html
+++ b/index.html
@@ -73,23 +73,23 @@
                 <h3 class="subtitle">まずはやる。</h3>
                 <div id="about-content-wrapper">
                   <div class="about-content">
-                    <img src="./assets/image/about-food.png" alt="about-food">
-                      <h4 id="food">食</h4>
+                    <div id="food"></div>
+                      <h4>食</h4>
                         <p>イベント等を開催し、チームや企画の進め方を知るきっかけです。また、高校の学部では調理師免許を取得し、大学では国内外の文化と人との出会いにつながっています。</p>
                   </div>
                   <div class="about-content">
-                    <img src="./assets/image/about-bicycle.png" alt="about-bicycle">
-                      <h4 id="bicycle">自転車</h4>
+                    <div id="bicycle"></div>
+                      <h4>自転車</h4>
                         <p>日本全国あちこちを周り、自分の視野が広がった大きな要因です。知っていると思っていた自分の住む国でさえ、行ってみないと気づかないことだらけでした。</p>
                   </div>
                   <div class="about-content">
-                    <img src="./assets/image/about-business.png" alt="about-business">
-                      <h4 id="business">経営</h4>
+                    <div id="business"></div>
+                      <h4>経営</h4>
                         <p>社会全体に影響する企業、ビジネスの世界を知ろうと大学では経営学を専攻。座学だけでなく、アイデアの練り方やプレゼンでの伝え方を鍛えたことは今も生きています。</p>
                   </div>
                   <div class="about-content">
-                    <img src="./assets/image/about-accounting.png" alt="about-accounting">
-                      <h4 id="accounting">会計</h4>
+                    <div id="accounting"></div>
+                      <h4>会計</h4>
                         <p>管理会計を中心に実務を経験しています。決算等の通常業務に加え、部署内外での情報伝達方法の改善や他チームとのコミュニケーションの機会を設け、推進しました。</p>
                   </div>
                 </div>
@@ -138,7 +138,9 @@
             <h4 class="subtitle">お気軽にお問合せください。</h3>
               <div id="contact">
                 <a href="#">note</a>
+                <br>
                 <a href="#">Scrapbox</a>
+                <br>
                 <a href="#">Github</a>
               </div>
           </div>
