--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 
   <body>
     <!-- header -->
-    <header class="header-wrapper">
+    <header id="header" class="header-wrapper">
       <div class="header-inner">
         <nav class="header-nav">
           <ul class="nav-list">
-            <li class="nav-item"><a href="#">TOP</a></li>
-            <li class="nav-item"><a href="#">Concept</a></li>
-            <li class="nav-item"><a href="#">About</a></li>
-            <li class="nav-item"><a href="#">Works</a></li>
-            <li class="nav-item"><a href="#">Contact&Social</a></li>
+            <li class="nav-item"><a href="#header">TOP</a></li>
+            <li class="nav-item"><a href="#concept">Concept</a></li>
+            <li class="nav-item"><a href="#about">About</a></li>
+            <li class="nav-item"><a href="#works">Works</a></li>
+            <li class="nav-item"><a href="#contact">Contact&Social</a></li>
           </ul>
         </nav>
       </div>
@@ -42,13 +42,13 @@
           <div id="top-img"></div>
           <h1 id="top-title">Haruna.N's portfolio</h1>
             <div id="pdf">
-              <a href="#">PDF版をダウンロードする</a>
+              <a href="https://drive.google.com/file/d/1czXzXj35lGNcgtMZZ8J9_EGiPrG_uaOu/view?usp=share_link">PDF版をダウンロードする</a>
             </div>
       </div>
       <!-- //top -->
 
       <!-- section_concept -->
-      <section class="section-wrapper">
+      <section id="concept" class="section-wrapper">
         <div class="section-content section-content-concept">
           <h2 class="title">Concept</h2>
             <div class="text-wrapper">
@@ -66,7 +66,7 @@
       <!-- //section_concept -->
 
       <!-- section_about -->
-      <section class="section-wrapper">
+      <section id="about" class="section-wrapper">
         <div class="section-content section-content-about">
           <h2 class="title">About</h2>
               <div id="text-wrapper-about">
@@ -100,27 +100,27 @@
 
 
       <!-- section_works -->
-      <section class="section-wrapper">
+      <section id="works" class="section-wrapper">
         <div class="section-content section-content-works">
           <h2 class="title">Works</h2>
           <div id="text-wrapper-works">
           <!-- Katten -->
             <div class="works-content">
-                <a id="katten" href="#">Katten</a>
+                <a id="katten" href="https://www.notion.so/Katten-ed84453a15f745c0973f7a2fb6ca5fe0">Katten</a>
                 <p>アプリコンセプト・デザイン</p>
                 <p>”いつでも見られる物置棚”</p>
             </div>
 
           <!-- Craftshop -->
             <div class="works-content">
-                <a id="craftshop" href="#">Craftshop</a>
+                <a id="craftshop" href="https://www.notion.so/Craft-shop-c68645c633dc41aea2c26dbd52147b64">Craftshop</a>
                 <p>ECサイト・ロゴデザイン</p>
                 <p>”愛される手仕事を伝える名刺”</p>
             </div>
 
           <!-- yaotan -->
             <div class="works-content">
-                <a id="yaotan" href="#">やおたん</a>
+                <a id="yaotan" href="https://www.notion.so/834df43eb3134867a125a275e10fd272">やおたん</a>
                 <p>アプリコンセプト・デザイン</p>
                 <p>”地域を、お店から好きになる。”</p>
             </div>
@@ -131,17 +131,17 @@
 
 
       <!-- section_contact -->
-      <section class="section-wrapper">
+      <section id="contact" class="section-wrapper">
         <div class="section-content section-content-contact">
           <h2 class="title">Contact&Social</h2>
           <div id="text-wrapper-contact">
             <h4 class="subtitle">お気軽にお問合せください。</h3>
-              <div id="contact">
-                <a href="#">note</a>
+              <div id="contact-social">
+                <a href="https://note.com/oyama_to_haru/">note</a>
                 <br>
-                <a href="#">Scrapbox</a>
+                <a href="https://scrapbox.io/harudesign/">Scrapbox</a>
                 <br>
-                <a href="#">Github</a>
+                <a href="https://github.com/haru24884">Github</a>
               </div>
           </div>
         </div>
